--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/morgan": "^1.9.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.0.2",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
